# circom_proof_schema

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  proof_schema.rs  proving_key.rs
